--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rvitems"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="DuplicateIds">
 
 
     <Button
@@ -13,24 +15,26 @@
         android:layout_height="wrap_content"
         android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvitems" />
 
     <EditText
         android:id="@+id/eitem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="322dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:hint="@string/add_an_item_here"
         android:inputType="none"
-        app:layout_constraintBottom_toBottomOf="@+id/btnadd"
-        app:layout_constraintEnd_toStartOf="@+id/btnadd" />
+        app:layout_constraintEnd_toStartOf="@+id/btnadd"
+        tools:layout_editor_absoluteY="644dp"
+        tools:ignore="MissingConstraints" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvitems"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="124dp"
-        app:layout_constraintBottom_toTopOf="@+id/eitem"
+        android:layout_height="560dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnadd"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
